.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
01:10:27 **** Incremental Build of configuration Debug for project Consola ****
make all 
Building file: ../src/Consola.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Consola.d" -MT"src/Consola.d" -o "src/Consola.o" "../src/Consola.c"
../src/Consola.c: In function ‘mostrar_consola’:
../src/Consola.c:53:8: error: request for member ‘pause’ in something not a structure or union
  system.pause();
        ^
make: *** [src/Consola.o] Error 1
01:10:34 **** Incremental Build of configuration Debug for project Consola ****
make all 
Building file: ../src/Consola.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Consola.d" -MT"src/Consola.d" -o "src/Consola.o" "../src/Consola.c"
Finished building: ../src/Consola.c
 
Building target: Consola
Invoking: GCC C Linker
gcc  -o "Consola"  ./src/Consola.o   -lcommons
Finished building target: Consola
 
